
Thu Jul 27 02:59:05 1995 Chris Provenzano (proven@mit.edu)

        * do_as_req.c do_tgs_req.c kdc_util.c main.c : Use new kdb format.

Mon Jul 17 15:13:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* main.c - Gut KDC profile handling logic and move it to lib/kadm/
		alt_prof.c because it's now used by admin and kadmin programs.
		Remove explicit stash file handling logic and supply stash
		file name to krb5_db_fetch_mkey() since it can now handle a
		non-default stash file name.

Thu Jul 13 19:51:33 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* main.c: Include netinet/in.h if we're using IP.

Wed Jul 12 12:19:44 EDT 1995	Paul Park	(pjpark@mit.edu)
	* main.c - Reorganize KDC profile handling so that the hierarchy for
		locating per-realm data is [realms]->realm->tag.  Add
		[kdcdefaults] section with primary_ports and secondary_ports
		to list ports to listen on.  Consolidate all port location here
		from network.c.  Add -s flag and change meaning of -p flag to
		be the default if none specified in KDC or Kerberos profile.
	* network.c - Open list of primary ports and then per-realm ports.
		Handle secondary ports just like primary ports except that
		bind failures are only warnings.  Support more than one
		secondary port.
	* extern,kdc_util.h - Add supporting definitions.
	* krb5kdc.M - update description of -p and add description of -s.

Tue Jul 11 07:35:12 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kerberos_v4.c: Add prototype for set_tgtkey

Mon Jul 10 17:01:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kerberos_v4.c: Add prototypes for compat_decrypt_key,
		kerb_get_principal, check_princ, v4_klog

	* network.c (process_packet): Make prog a const char *. 

	* main.c: Add prototypes for find_realm_data, setup_server_realm,
		usage, request_exit, setup_signal_handlers, initialize_realms,
			finish_realms. 

	* kdc_util.h: Add prototypes for against_local_policy_as,
		against_local_policy_tgs, validate_as_request,